Added module path and add modules option